--- a/app/assets/stylesheets/api/campaigns.scss
+++ b/app/assets/stylesheets/api/campaigns.scss
@@ -2,4 +2,43 @@
   background-color: orange;
   width: 50%;
   height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.campaign-form-fields {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%
+}
+
+.campaign-form-fields input {
+  width: 90%;
+  padding: 1%;
+  border: none;
+  margin: 4% 0 0 0;
+}
+
+.campaign-form-fields textarea {
+  resize: none;
+  width: 90%;
+  padding: 1%;
+  border: none;
+  margin: 2%;
+}
+
+.campaign-form-cancel {
+  width: 92%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.campaign-form-create {
+  width: 92%;
+  display: flex;
+  justify-content: flex-end;
 }
