Add styling to campaign page

--- a/app/assets/stylesheets/api/nav.scss
+++ b/app/assets/stylesheets/api/nav.scss
@@ -33,3 +33,13 @@
 .open-dropdown {
   position: absolute;
 }
+
+.nav-bar a:hover {
+  cursor: pointer;
+  color: skyblue;
+}
+
+.nav-bar button:hover {
+  cursor: pointer;
+  color: skyblue;
+}
