--- a/app/assets/stylesheets/api/nav.scss
+++ b/app/assets/stylesheets/api/nav.scss
@@ -43,3 +43,29 @@
   cursor: pointer;
   color: skyblue;
 }
+
+.nav-mail {
+  display: flex;
+  position: relative;
+}
+
+.nav-mail-count {
+  position: absolute;
+  top: -4px;
+  right: -10px;
+  background-color: red;
+  color: white;
+  width: 15px;
+  height: 13px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 65%;
+}
+
+
+
+.nav-mail-count:hover {
+  cursor: default;
+}
