--- a/app/assets/stylesheets/api/profile.scss
+++ b/app/assets/stylesheets/api/profile.scss
@@ -1,4 +1,13 @@
+.profile {
+  padding: 2% 5%;
+}
+
+.profile-name {
+  font-size: 20px;
+}
+
 .profile-home {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 2% 8%;
 }
