--- a/app/assets/stylesheets/api/nav.scss
+++ b/app/assets/stylesheets/api/nav.scss
@@ -32,7 +32,16 @@
 }
 
 .dropdown-item {
-  background-color: skyblue;
+  background-color: white;
+  padding: 10px;
+  font-size: 75%;
+}
+
+.dropdown-item-buttons {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 3px;
 }
 
 .nav-bar a:hover {
@@ -74,10 +83,10 @@
 }
 
 .nav-mail-triangle {
-  margin-left: 15px;
+  margin-left: 5px;
   width: 0;
   height: 0;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid skyblue;
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  border-bottom: 12px solid white;
 }
