--- a/app/assets/stylesheets/api/campaign.scss
+++ b/app/assets/stylesheets/api/campaign.scss
@@ -14,6 +14,10 @@
   font-size: 10px;
 }
 
+.campaign button {
+  height: 25px;
+}
+
 .campaign button:hover {
   color: skyblue;
   cursor: pointer;
