Work on dropdowns for campaign players

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-    <link rel="icon" href="<%= asset_path('logo.png') %>">
+    <link rel="icon" href="<%= asset_path('rune.png') %>">
   </head>
 
   <body>
