--- a/app/assets/stylesheets/api/campaign.scss
+++ b/app/assets/stylesheets/api/campaign.scss
@@ -14,11 +14,35 @@
   font-size: 10px;
 }
 
+.campaign-players {
+  font-size: 10px;
+  display: flex;
+}
+
+.campaign-player {
+  margin-left: 6px;
+  display: flex;
+}
+
 .campaign button {
   height: 25px;
 }
 
 .campaign button:hover {
   color: skyblue;
+  cursor: pointer;
+}
+
+.remove-player-triangle {
+  height: 0px;
+  width: 0px;
+  border-top: 4px solid black;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  margin-top: 4px;
+}
+
+.remove-player-triangle:hover {
+  border-top: 4px solid skyblue;
   cursor: pointer;
 }
