--- a/app/assets/stylesheets/api/campaign_form.scss
+++ b/app/assets/stylesheets/api/campaign_form.scss
@@ -1,9 +1,11 @@
 .campaign-form-box {
-  background-color: orange;
+  background-color: #eee;
+  border-radius: 3px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
+  height: 190px;
 }
 
 .campaign-form-fields {
@@ -26,17 +28,23 @@
   width: 90%;
   padding: 1%;
   border: none;
-  margin: 2%;
+  margin: 2% 0 4%;
 }
 
 .campaign-form-cancel {
   width: 92%;
   display: flex;
   justify-content: flex-start;
+  margin-top: 5%;
 }
 
 .campaign-form-create {
   width: 92%;
   display: flex;
   justify-content: flex-end;
+}
+
+.campaign-form-errors {
+  margin: 5px 2%;
+  color: red;
 }
